[JVM] Fix all -Xlint:deprecation,unchecked warnings
We should probably use `-Xlint:all` some day, but:

1. There are a lot more warnings to go.

2. This is supposed to be part of an atomics PR.

So just focus on the warnings that are visible by default for now. Lint
for these to prevent them from popping up again.